finish about section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<section class="intro">
 		<div class="container">
 			<div class="center">
-				<p class="desc">Creative Template</p>
+				<p class="overhead">Creative Template</p>
 				<h1>Welcome to MoGo</h1>
 				<hr>
 				<a class="btn" href="#">Learn more</a>
@@ -44,6 +44,40 @@
 					<li><span>02</span> work</li>
 					<li><span>03</span> about</li>
 					<li><span>04</span> contacts</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="about">
+		<div class="container">
+			<div class="center title-wrap">
+				<div class="overhead">What we do</div>
+				<h2>Story about us</h2>
+				<hr>
+				<p class="title-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<div class="gallery">
+				<ul>
+					<li>
+						<img src="files/keyboard.jpg" alt="keyboard on the desktop" width="380" height="250">
+						<div class="overlay center">
+							<p>Super team</p>
+						</div>
+					</li>
+					<li>
+						<img src="files/headphones.jpg" alt="headphones on the desktop" width="380" height="250">
+						<div class="overlay center">
+							<p>Super team</p>
+						</div>
+					</li>
+					<li>
+						<img src="files/corner.jpg" alt="corner of the desktop" width="380" height="250">
+						<div class="overlay center">
+							<p>Super team</p>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
