finish statistics section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="statistics">
+		<h2 class="visually-hidden">Статистика</h2>
+		<div class="container">
+			<ul>
+				<li class="center"><span>42</span>Web Design Projects</li>
+				<li class="center"><span>123</span>happy client</li>
+				<li class="center"><span>12</span>award winner</li>
+				<li class="center"><span>99</span>cup of coffee</li>
+				<li class="center"><span>24</span>members</li>
+			</ul>
+		</div>
+	</section>
 	
 </body>
 </html>
