finish services section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<li><a href="#">Service</a></li>
 					<li><a href="#">Work</a></li>
 					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>					
+					<li><a href="#">Contact</a></li>				
 				</ul>
 			</nav>
 			<div class="user-button">
@@ -91,6 +91,42 @@
 				<li class="center"><span>99</span>cup of coffee</li>
 				<li class="center"><span>24</span>members</li>
 			</ul>
+		</div>
+	</section>
+
+	<section class="services">
+		<div class="container">
+			<div class="center title-wrap">
+				<div class="overhead">We work with</div>
+				<h2>Amazing Services</h2>
+			</div>
+			<dl>
+				<div class="dl-item dt-photography">
+					<dt>Photography</dt>
+					<dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
+				</div>
+				<div class="dl-item dt-web-design">
+					<dt>Web Design</dt>
+					<dd>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
+				</div>
+				<div class="dl-item dt-creativity">
+					<dt>Creativity</dt>
+					<dd>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
+				</div>
+				<hr class="separator">
+				<div class="dl-item dt-seo">
+					<dt>seo</dt>
+					<dd>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</dd>
+				</div>
+				<div class="dl-item dt-css-html">
+					<dt>Css/Html</dt>
+					<dd>Lorem dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
+				</div>
+				<div class="dl-item dt-digital">
+					<dt>digital</dt>
+					<dd>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
+				</div>
+			</dl>
 		</div>
 	</section>
 	
