finish section for uniqua disign

--- a/index.html
+++ b/index.html
@@ -130,5 +130,15 @@
 		</div>
 	</section>
 	
+	<section class="unique-design">
+		<div class="container">
+			<div class="center title-wrap">
+				<div class="overhead">For all devices</div>
+				<h2>Unique design</h2>
+			</div>
+			<img src="files/ipad.png" alt="ipad" class="ipad">
+			<img src="files/iphone.png" alt="iphone" class="iphone">
+		</div>
+	</section>
 </body>
 </html>
