--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<dt>Creativity</dt>
 					<dd>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
 				</div>
-				<hr class="separator">
+				<div class="separator"></div>
 				<div class="dl-item dt-seo">
 					<dt>seo</dt>
 					<dd>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</dd>
