--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<div class="center">
 				<p class="overhead">Creative Template</p>
 				<h1>Welcome to MoGo</h1>
+				<div class="line"></div>
 				<a class="btn" href="#">Learn more</a>
 			</div>			
 			<div class="slider">
@@ -53,6 +54,7 @@
 			<div class="center title-wrap">
 				<div class="overhead">What we do</div>
 				<h2>Story about us</h2>
+				<div class="line"></div>
 				<p class="title-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
@@ -99,6 +101,7 @@
 			<div class="center title-wrap">
 				<div class="overhead">We work with</div>
 				<h2>Amazing Services</h2>
+				<div class="line"></div>
 			</div>
 			<dl>
 				<div class="dl-item dt-photography">
@@ -135,6 +138,7 @@
 			<div class="center title-wrap">
 				<div class="overhead">For all devices</div>
 				<h2>Unique design</h2>
+				<div class="line"></div>
 			</div>
 			<img src="files/ipad.png" alt="ipad" class="ipad">
 			<img src="files/iphone.png" alt="iphone" class="iphone">
@@ -146,6 +150,7 @@
 			<div class="center title-wrap">
 				<div class="overhead">Service</div>
 				<h2>what we do</h2>
+				<div class="line"></div>
 				<p class="title-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
@@ -191,8 +196,8 @@
 						</dd>					
 					</dl>
 				</div>
-			</div>
-		</div>
+			</div> <!-- end .content -->
+		</div> <!-- end .container -->
 	</section>
 </body>
 </html>
