finish section for quotes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@300i;400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Mogo</title>
 </head>
@@ -198,6 +198,24 @@
 				</div>
 			</div> <!-- end .content -->
 		</div> <!-- end .container -->
+	</section>
+
+	<section class="quotes">
+		<div class="container">
+			<div class="slider-quotes">
+				<figure>
+					<blockquote>
+					    "Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non
+						proident."
+					</blockquote>
+					<figcaption>
+					    <div class="line"></div> 
+					    <cite>Jon Doe</cite>
+					</figcaption>
+				</figure>
+			</div>
+		</div>		
 	</section>
 </body>
 </html>
