--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 
 	<section class="quotes">
 		<div class="container">
+			<h2 class="visually-hidden">Quotes</h2>
 			<div class="slider-quotes">
 				<figure>
 					<blockquote>
@@ -217,5 +218,7 @@
 			</div>
 		</div>		
 	</section>
+
+
 </body>
 </html>
