finish section for team

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="css/fontawesome.min.css"> -->
+	<link rel="stylesheet" href="css/all.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	
 	<title>Mogo</title>
@@ -236,11 +236,12 @@
 				<figure>
 					<div class="img-wrap">
 						<img src="files/employee1.jpg" alt="keyboard on the desktop" width="380" height="470">
-						<div class="overlay center">					<div class="social-wrap">
-								<a href="#" class="facebook">facebook</a>
-								<a href="#" class="twitter">twitter</a>
-								<a href="#" class="pinterest">pinterest</a>
-								<a href="#" class="instagram">instagram</a>
+						<div class="overlay center">					
+							<div class="social-wrap">
+								<a href="#" class="fab fa-facebook-f">facebook</a>
+								<a href="#" class="fab fa-twitter">twitter</a>
+								<a href="#" class="fab fa-pinterest-p">pinterest</a>
+								<a href="#" class="fab fa-instagram">instagram</a>
 							</div>		
 						</div>
 					</div>					
@@ -256,10 +257,10 @@
 						<img src="files/employee2.jpg" alt="keyboard on the desktop" width="380" height="470">
 						<div class="overlay center">
 							<div class="social-wrap">
-								<a href="#" class="facebook">facebook</a>
-								<a href="#" class="twitter">twitter</a>
-								<a href="#" class="pinterest">pinterest</a>
-								<a href="#" class="instagram">instagram</a>
+								<a href="#" class="fab fa-facebook-f">facebook</a>
+								<a href="#" class="fab fa-twitter">twitter</a>
+								<a href="#" class="fab fa-pinterest-p">pinterest</a>
+								<a href="#" class="fab fa-instagram">instagram</a>
 							</div>	
 						</div>
 					</div>
@@ -275,10 +276,10 @@
 						<img src="files/employee3.jpg" alt="keyboard on the desktop" width="380" height="470">
 						<div class="overlay center">
 							<div class="social-wrap">
-								<a href="#" class="facebook">facebook</a>
-								<a href="#" class="twitter">twitter</a>
-								<a href="#" class="pinterest">pinterest</a>
-								<a href="#" class="instagram">instagram</a>
+								<a href="#" class="fab fa-facebook-f">facebook</a>
+								<a href="#" class="fab fa-twitter">twitter</a>
+								<a href="#" class="fab fa-pinterest-p">pinterest</a>
+								<a href="#" class="fab fa-instagram">instagram</a>
 							</div>	
 						</div>
 					</div>
