finish section for clients

--- a/index.html
+++ b/index.html
@@ -294,5 +294,16 @@
 		</div>
 	</section>
 
+	<section class="clients">
+		<div class="container">
+			<h2 class="visually-hidden">Клиенты</h2>
+			<img src="./files/client1.png" alt="" width="130" height="130">
+			<img src="./files/client2.png" alt="" width="130" height="130">
+			<img src="./files/client3.png" alt="" width="130" height="130">
+			<img src="./files/client4.png" alt="" width="130" height="130">
+			<img src="./files/client5.png" alt="" width="130" height="130">
+			<img src="./files/client6.png" alt="" width="130" height="130">
+		</div>
+	</section>
 </body>
 </html>
