finish section for Our work

--- a/index.html
+++ b/index.html
@@ -305,5 +305,71 @@
 			<img src="./files/client6.png" alt="" width="130" height="130">
 		</div>
 	</section>
+
+	<section class="our-work">
+		<div class="container">
+			<div class="center title-wrap">
+				<div class="overhead">What we do</div>
+				<h2>some of our work</h2>
+				<div class="line"></div>
+				<p class="title-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+		<div class="gallery3">
+			<ul>
+				<li>
+					<img src="files/work1.jpg" alt="work 1" width="480" height="390">
+					<a href="#" class="overlay center">
+						<p class="title">creatively designed</p>
+						<p class="desc">Lorem ipsum dolor sit</p>
+					</a>
+				</li>
+				<li>
+					<img src="files/work2.jpg" alt="work 2" width="480" height="390">
+					<a href="#" class="overlay center">
+						<p class="title">creatively designed</p>
+						<p class="desc">Lorem ipsum dolor sit</p>
+					</a>
+				</li>
+				<li class="long">
+					<img src="files/work3.jpg" alt="work 3" width="480" height="780">
+					<a href="#" class="overlay center">
+						<p class="title">creatively designed</p>
+						<p class="desc">Lorem ipsum dolor sit</p>
+					</a>
+				</li>
+				<li>
+					<img src="files/work4.jpg" alt="work 4" width="480" height="390">
+					<a href="#" class="overlay center">
+						<p class="title">creatively designed</p>
+						<p class="desc">Lorem ipsum dolor sit</p>
+					</a>
+				</li>
+				<li>
+					<img src="files/work5.jpg" alt="work 5" width="480" height="390">
+					<a href="#" class="overlay center">
+						<p class="title">creatively designed</p>
+						<p class="desc">Lorem ipsum dolor sit</p>
+					</a>
+				</li>
+				<li>
+					<img src="files/work6.jpg" alt="work 6" width="480" height="390">
+					<a href="#" class="overlay center">
+						<p class="title">creatively designed</p>
+						<p class="desc">Lorem ipsum dolor sit</p>
+					</a>
+				</li>
+				<li>
+					<img src="files/work7.jpg" alt="work 7" width="480" height="390">
+					<a href="#" class="overlay center">
+						<p class="title">creatively designed</p>
+						<p class="desc">Lorem ipsum dolor sit</p>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</section>
+	
 </body>
 </html>
