fix section for clients
add alt

--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
 	<section class="clients">
 		<div class="container">
 			<h2 class="visually-hidden">Клиенты</h2>
-			<img src="./files/client1.png" alt="" width="130" height="130">
-			<img src="./files/client2.png" alt="" width="130" height="130">
-			<img src="./files/client3.png" alt="" width="130" height="130">
-			<img src="./files/client4.png" alt="" width="130" height="130">
-			<img src="./files/client5.png" alt="" width="130" height="130">
-			<img src="./files/client6.png" alt="" width="130" height="130">
+			<img src="./files/client1.png" alt="Hipster barbershop" width="130" height="130">
+			<img src="./files/client2.png" alt="ABCD" width="130" height="130">
+			<img src="./files/client3.png" alt="Design quality" width="130" height="130">
+			<img src="./files/client4.png" alt="Hipster barbershop" width="130" height="130">
+			<img src="./files/client5.png" alt="Hipster barbershop" width="130" height="130">
+			<img src="./files/client6.png" alt="Studio designer" width="130" height="130">
 		</div>
 	</section>
 
