finish section for reviews

--- a/index.html
+++ b/index.html
@@ -371,5 +371,27 @@
 		</div>
 	</section>
 	
+	<section class="reviews">
+		<div class="container">
+			<h2 class="visually-hidden">Quotes</h2>
+			<div class="slider-reviews">
+				<figure>
+					<div class="img_wrap">
+						<img src="./files/review1.jpg" alt="Joshua Earle">
+					</div>
+					<blockquote>
+					    "Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non
+						proident."
+					</blockquote>
+					<figcaption>
+					    <div class="line"></div> 
+					    <cite>Joshua Earle</cite>
+					</figcaption>
+				</figure>
+			</div>
+		</div>		
+	</section>
+
 </body>
 </html>
