finish section for people say

--- a/index.html
+++ b/index.html
@@ -393,5 +393,68 @@
 		</div>		
 	</section>
 
+	<section class="people-say">
+		<div class="container">
+			<div class="center title-wrap">
+				<div class="overhead">Happy Clients</div>
+				<h2>What people say</h2>
+				<div class="line"></div>				
+			</div>
+			<div class="block-reviews">
+				<div class="reviews-item">
+					<div class="img_wrap">
+						<img src="./files/say1.jpg" width="110" height="110" alt="Matthew Dix">
+					</div>
+					<cite>Matthew Dix</cite>
+					<p class="position">Graphic Design</p>
+					<div class="line"></div>
+					<blockquote>
+					    Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</blockquote>
+				</div>
+
+				<div class="reviews-item">
+					<div class="img_wrap">
+						<img src="./files/say2.jpg" width="110" height="110" alt="Nick Karvounis">
+					</div>
+					<cite>Nick Karvounis</cite>
+					<p class="position">Graphic Design</p>
+					<div class="line"></div>
+					<blockquote>
+					    Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</blockquote>
+				</div>
+
+				<div class="reviews-item">
+					<div class="img_wrap">
+						<img src="./files/say3.jpg" width="110" height="110" alt="Jaelynn Castillo">
+					</div>
+					<cite>Jaelynn Castillo</cite>
+					<p class="position">Graphic Design</p>
+					<div class="line"></div>
+					<blockquote>
+					    Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</blockquote>
+				</div>
+
+				<div class="reviews-item">
+					<div class="img_wrap">
+						<img src="./files/say4.jpg" width="110" height="110" alt="Mike Petrucci">
+					</div>
+					<cite>Mike Petrucci</cite>
+					<p class="position">Graphic Design</p>
+					<div class="line"></div>
+					<blockquote>
+					    Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua.
+					</blockquote>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </body>
 </html>
