finish section for latest blog

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 			<h2 class="visually-hidden">Quotes</h2>
 			<div class="slider-reviews">
 				<figure>
-					<div class="img_wrap">
+					<div class="img-wrap">
 						<img src="./files/review1.jpg" alt="Joshua Earle">
 					</div>
 					<blockquote>
@@ -402,7 +402,7 @@
 			</div>
 			<div class="block-reviews">
 				<div class="reviews-item">
-					<div class="img_wrap">
+					<div class="img-wrap">
 						<img src="./files/say1.jpg" width="110" height="110" alt="Matthew Dix">
 					</div>
 					<cite>Matthew Dix</cite>
@@ -415,7 +415,7 @@
 				</div>
 
 				<div class="reviews-item">
-					<div class="img_wrap">
+					<div class="img-wrap">
 						<img src="./files/say2.jpg" width="110" height="110" alt="Nick Karvounis">
 					</div>
 					<cite>Nick Karvounis</cite>
@@ -428,7 +428,7 @@
 				</div>
 
 				<div class="reviews-item">
-					<div class="img_wrap">
+					<div class="img-wrap">
 						<img src="./files/say3.jpg" width="110" height="110" alt="Jaelynn Castillo">
 					</div>
 					<cite>Jaelynn Castillo</cite>
@@ -441,7 +441,7 @@
 				</div>
 
 				<div class="reviews-item">
-					<div class="img_wrap">
+					<div class="img-wrap">
 						<img src="./files/say4.jpg" width="110" height="110" alt="Mike Petrucci">
 					</div>
 					<cite>Mike Petrucci</cite>
@@ -456,5 +456,57 @@
 		</div>
 	</section>
 
+	<section class="latest-blog">
+		<div class="container">
+			<div class="center title-wrap">
+				<div class="overhead">Our stories</div>
+				<h2>Latest blog</h2>
+				<div class="line"></div>				
+			</div>
+			<ul class="latest-posts">
+				<li class="latest-posts-item">
+					<div class="img-wrap">
+						<a href="#"><img src="./files/post1.jpg" width="380" height="240" alt=""></a>
+						<p class="date center"><span>15</span> Jan</p>
+					</div>					
+					<a href="#" class="title">Lorem ipsum dolor sit amet</a>
+					<p class="desc">Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed.</p>
+					<div class="separator"></div>
+					<div class="stat">
+						<p class="views-number">542</p>
+						<p class="comments-number">17</p>
+					</div>					
+				</li>
+
+				<li class="latest-posts-item">
+					<div class="img-wrap">
+						<a href="#"><img src="./files/post2.jpg" width="380" height="240" alt=""></a>
+						<p class="date center"><span>14</span> Jan</p>
+					</div>	
+					<a href="#" class="title">sed do eiusmod tempor</a>
+					<p class="desc">Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+					<div class="separator"></div>
+					<div class="stat">
+						<p class="views-number">992</p>
+						<p class="comments-number">45</p>
+					</div>					
+				</li>
+
+				<li class="latest-posts-item">
+					<div class="img-wrap">
+						<a href="#"><img src="./files/post3.jpg" width="380" height="240" alt=""></a>
+						<p class="date center"><span>12</span> Jan</p>
+					</div>	
+					<a href="#" class="title">incididunt ut labore et dolore</a>
+					<p class="desc">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+					<div class="separator"></div>
+					<div class="stat">
+						<p class="views-number">1560</p>
+						<p class="comments-number">98</p>
+					</div>					
+				</li>
+			</ul>
+		</div>
+	</section>
 </body>
 </html>
