finish for Open map

--- a/index.html
+++ b/index.html
@@ -508,5 +508,13 @@
 			</ul>
 		</div>
 	</section>
+
+	<section class="open-map">
+		<a href="#" target="_blank" class="center title-wrap">
+			<h2>Open map</h2>
+			<div class="line"></div>				
+		</a>
+	</section>
+
 </body>
 </html>
