--- a/index.html
+++ b/index.html
@@ -473,8 +473,8 @@
 					<p class="desc">Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed.</p>
 					<div class="separator"></div>
 					<div class="stat">
-						<p class="views-number">542</p>
-						<p class="comments-number">17</p>
+						<p class="views-number"><i class="fas fa-eye"></i> 542</p>
+						<p class="comments-number"><i class="fas fa-comment-dots"></i> 17</p>
 					</div>					
 				</li>
 
@@ -487,8 +487,8 @@
 					<p class="desc">Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
 					<div class="separator"></div>
 					<div class="stat">
-						<p class="views-number">992</p>
-						<p class="comments-number">45</p>
+						<p class="views-number"><i class="fas fa-eye"></i> 992</p>
+						<p class="comments-number"><i class="fas fa-comment-dots"></i> 45</p>
 					</div>					
 				</li>
 
@@ -501,8 +501,8 @@
 					<p class="desc">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
 					<div class="separator"></div>
 					<div class="stat">
-						<p class="views-number">1560</p>
-						<p class="comments-number">98</p>
+						<p class="views-number"><i class="fas fa-eye"></i> 1560</p>
+						<p class="comments-number"><i class="fas fa-comment-dots"></i> 98</p>
 					</div>					
 				</li>
 			</ul>
@@ -511,6 +511,7 @@
 
 	<section class="open-map">
 		<a href="#" target="_blank" class="center title-wrap">
+			<i class="fas fa-map-marker-alt"></i>
 			<h2>Open map</h2>
 			<div class="line"></div>				
 		</a>
