--- a/index.html
+++ b/index.html
@@ -526,15 +526,15 @@
 				<p class="followers"><span>15k</span> followers</p>
 				<div class="social">
 					<p class="title">Follow Us:</p>
-					<a href="#" class="fab fa-facebook-f">facebook</a>
-					<a href="#" class="fab fa-twitter">twitter</a>
-					<a href="#" class="fab fa-instagram">instagram</a>
-					<a href="#" class="fab fa-pinterest-p">pinterest</a>
-					<a href="#" class="fab fa-google-plus-g">google plus</a>
-					<a href="#" class="fab fa-youtube">youtube</a>
-					<a href="#" class="fab fa-tumblr">tumblr</a>
+					<a href="#" target="_blank" class="fab fa-facebook-f">facebook</a>
+					<a href="#" target="_blank" class="fab fa-twitter">twitter</a>
+					<a href="#" target="_blank" class="fab fa-instagram">instagram</a>
+					<a href="#" target="_blank" class="fab fa-pinterest-p">pinterest</a>
+					<a href="#" target="_blank" class="fab fa-google-plus-g">google plus</a>
+					<a href="#" target="_blank" class="fab fa-youtube">youtube</a>
+					<a href="#" target="_blank" class="fab fa-tumblr">tumblr</a>
 				</div>
-				<form class="input-container"> 
+				<form class="subscribe"> 
 				    <input class="input" placeholder="Your Email..."> 
 				    <button type="submit" class="add-on icon-search">Subscribe</button> 
 				</form>
@@ -560,15 +560,15 @@
 			<div class="instagram">
 				<p class="title">instagram</p>
 				<div class="instagram-photos">
-					<img src="./files/inst1.jpg" width="88" height="88" alt="">
-					<img src="./files/inst2.jpg" width="88" height="88" alt="">
-					<img src="./files/inst3.jpg" width="88" height="88" alt="">
-					<img src="./files/inst4.jpg" width="88" height="88" alt="">
-					<img src="./files/inst5.jpg" width="88" height="88" alt="">
-					<img src="./files/inst6.jpg" width="88" height="88" alt="">
-					<img src="./files/inst7.jpg" width="88" height="88" alt="">
-					<img src="./files/inst8.jpg" width="88" height="88" alt="">
-					<img src="./files/inst9.jpg" width="88" height="88" alt="">
+					<a href="#" target="_blank"><img src="./files/inst1.jpg" width="88" height="88" alt=""></a>
+					<a href="#" target="_blank"><img src="./files/inst2.jpg" width="88" height="88" alt=""></a>
+					<a href="#" target="_blank"><img src="./files/inst3.jpg" width="88" height="88" alt=""></a>
+					<a href="#" target="_blank"><img src="./files/inst4.jpg" width="88" height="88" alt=""></a>
+					<a href="#" target="_blank"><img src="./files/inst5.jpg" width="88" height="88" alt=""></a>
+					<a href="#" target="_blank"><img src="./files/inst6.jpg" width="88" height="88" alt=""></a>
+					<a href="#" target="_blank"><img src="./files/inst7.jpg" width="88" height="88" alt=""></a>
+					<a href="#" target="_blank"><img src="./files/inst8.jpg" width="88" height="88" alt=""></a>
+					<a href="#" target="_blank"><img src="./files/inst9.jpg" width="88" height="88" alt=""></a>
 				</div>
 				<a href="#" class="more">View more photos</a>
 			</div>
