--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<li><a href="#">Contact</a></li>				
 				</ul>
 			</nav>
-			<div class="user-button">
+			<div class="user-buttons">
 				<button type="button" class="shopping">Shopping cart</button>
 				<button type="button" class="search">Search</button>
 			</div>
