finish adaptive nav and intro

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="container">
 			<div class="center">
 				<p class="overhead">Creative Template</p>
-				<h1>Welcome to MoGo</h1>
+				<h1>Welcome<br>to MoGo</h1>
 				<div class="line"></div>
 				<a class="btn" href="#">Learn more</a>
 			</div>			
