finish adaptive Services

--- a/index.html
+++ b/index.html
@@ -106,20 +106,19 @@
 				<div class="line"></div>
 			</div>
 			<dl>
-				<div class="dl-item dt-photography">
+				<div class="dl-item tablet-border desk-border dt-photography">
 					<dt>Photography</dt>
 					<dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
 				</div>
-				<div class="dl-item dt-web-design">
+				<div class="dl-item tablet-border desk-border dt-web-design">
 					<dt>Web Design</dt>
 					<dd>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
 				</div>
-				<div class="dl-item dt-creativity">
+				<div class="dl-item tablet-border desk-border dt-creativity">
 					<dt>Creativity</dt>
 					<dd>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</dd>
 				</div>
-				<div class="separator"></div>
-				<div class="dl-item dt-seo">
+				<div class="dl-item tablet-border dt-seo">
 					<dt>seo</dt>
 					<dd>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</dd>
 				</div>
