finish adaptive Our work

--- a/index.html
+++ b/index.html
@@ -321,52 +321,52 @@
 			<ul>
 				<li>
 					<img src="files/work1.jpg" alt="work 1" width="480" height="390">
-					<a href="#" class="overlay center">
-						<p class="title">creatively designed</p>
+					<div class="overlay center">
+						<a href="#" class="title">creatively designed</a>
 						<p class="desc">Lorem ipsum dolor sit</p>
-					</a>
+					</div>
 				</li>
 				<li>
 					<img src="files/work2.jpg" alt="work 2" width="480" height="390">
-					<a href="#" class="overlay center">
-						<p class="title">creatively designed</p>
+					<div class="overlay center">
+						<a href="#" class="title">creatively designed</a>
 						<p class="desc">Lorem ipsum dolor sit</p>
-					</a>
+					</div>
 				</li>
 				<li class="long">
 					<img src="files/work3.jpg" alt="work 3" width="480" height="780">
-					<a href="#" class="overlay center">
-						<p class="title">creatively designed</p>
+					<div class="overlay center">
+						<a href="#" class="title">creatively designed</a>
 						<p class="desc">Lorem ipsum dolor sit</p>
-					</a>
+					</div>
 				</li>
 				<li>
 					<img src="files/work4.jpg" alt="work 4" width="480" height="390">
-					<a href="#" class="overlay center">
-						<p class="title">creatively designed</p>
+					<div class="overlay center">
+						<a href="#" class="title">creatively designed</a>
 						<p class="desc">Lorem ipsum dolor sit</p>
-					</a>
+					</div>
 				</li>
 				<li>
 					<img src="files/work5.jpg" alt="work 5" width="480" height="390">
-					<a href="#" class="overlay center">
-						<p class="title">creatively designed</p>
+					<div class="overlay center">
+						<a href="#" class="title">creatively designed</a>
 						<p class="desc">Lorem ipsum dolor sit</p>
-					</a>
+					</div>
 				</li>
 				<li>
 					<img src="files/work6.jpg" alt="work 6" width="480" height="390">
-					<a href="#" class="overlay center">
-						<p class="title">creatively designed</p>
+					<div class="overlay center">
+						<a href="#" class="title">creatively designed</a>
 						<p class="desc">Lorem ipsum dolor sit</p>
-					</a>
+					</div>
 				</li>
 				<li>
 					<img src="files/work7.jpg" alt="work 7" width="480" height="390">
-					<a href="#" class="overlay center">
-						<p class="title">creatively designed</p>
+					<div class="overlay center">
+						<a href="#" class="title">creatively designed</a>
 						<p class="desc">Lorem ipsum dolor sit</p>
-					</a>
+					</div>
 				</li>
 			</ul>
 		</div>
