finish adaptive footer and Our works

--- a/index.html
+++ b/index.html
@@ -540,19 +540,25 @@
 			<div class="blogs">
 				<p class="title">blogs</p>
 				<div class="blogs-item">
-					<a href="#"><img src="./files/footer-post1.jpg" width="120" height="80" alt=""></a>
-					<a href="#" class="title">Lorem ipsum dolor sit amet,  consectetur adipiscing</a>
-					<p class="date">Jan 9, 2016</p>
+					<a href="#" class="img-wrap"><img src="./files/footer-post1.jpg" width="120" height="80" alt=""></a>
+					<div class="text">
+						<a href="#" class="title">Lorem ipsum dolor sit amet,  consectetur adipiscing</a>
+						<p class="date">Jan 9, 2016</p>
+					</div>
 				</div>
 				<div class="blogs-item">
-					<a href="#"><img src="./files/footer-post2.jpg" width="120" height="80" alt=""></a>
-					<a href="#" class="title">Consectetur adipiscing elit,  sed do eiusmod tempor</a>
-					<p class="date">Jan 9, 2016</p>
+					<a href="#" class="img-wrap"><img src="./files/footer-post2.jpg" width="120" height="80" alt=""></a>
+					<div class="text">
+						<a href="#" class="title">Consectetur adipiscing elit,  sed do eiusmod tempor</a>
+						<p class="date">Jan 9, 2016</p>
+					</div>
 				</div>
 				<div class="blogs-item">
-					<a href="#"><img src="./files/footer-post3.jpg" width="120" height="80" alt=""></a>
-					<a href="#" class="title">sed do eiusmod tempor  incididunt ut labore</a>
-					<p class="date">Jan 9, 2016</p>
+					<a href="#" class="img-wrap"><img src="./files/footer-post3.jpg" width="120" height="80" alt=""></a>
+					<div class="text">
+						<a href="#" class="title">sed do eiusmod tempor  incididunt ut labore</a>
+						<p class="date">Jan 9, 2016</p>
+					</div>
 				</div>
 			</div>
 			<div class="instagram">
