finish adaptive Header

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<header>
 		<div class="container">
 			<div class="logo">MoGo</div>
+			<button class="nav-toggle">
+				<div>Меню</div>
+			</button>
 			<nav>
 				<ul>
 					<li class="active"><a href="#">About</a></li>
@@ -24,11 +27,13 @@
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Contact</a></li>				
 				</ul>
+				<div class="user-buttons">
+					<button type="button" class="shopping">Shopping cart</button>
+					<button type="button" class="search">Search</button>
+				</div>
 			</nav>
-			<div class="user-buttons">
-				<button type="button" class="shopping">Shopping cart</button>
-				<button type="button" class="search">Search</button>
-			</div>
+			
+			
 		</div>
 	</header>
 
