--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/all.min.css">
+	
+	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+	<!-- <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
 	<link rel="stylesheet" href="css/style.css">
 	
 	<title>Mogo</title>
@@ -221,6 +224,17 @@
 					    <cite>Jon Doe</cite>
 					</figcaption>
 				</figure>
+				<figure>
+					<blockquote>
+					    "Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non
+						proident."
+					</blockquote>
+					<figcaption>
+					    <div class="line"></div> 
+					    <cite>Jon Doe</cite>
+					</figcaption>
+				</figure>
 			</div>
 		</div>		
 	</section>
@@ -381,6 +395,20 @@
 		<div class="container">
 			<h2 class="visually-hidden">Quotes</h2>
 			<div class="slider-reviews">
+				<figure>
+					<div class="img-wrap">
+						<img src="./files/review1.jpg" alt="Joshua Earle">
+					</div>
+					<blockquote>
+					    "Lorem ipsum dolor sit amet, consectetur 	adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non
+						proident."
+					</blockquote>
+					<figcaption>
+					    <div class="line"></div> 
+					    <cite>Joshua Earle</cite>
+					</figcaption>
+				</figure>
 				<figure>
 					<div class="img-wrap">
 						<img src="./files/review1.jpg" alt="Joshua Earle">
@@ -590,6 +618,7 @@
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
