--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 				<p class="overhead">Creative Template</p>
 				<h1>Welcome<br>to MoGo</h1>
 				<div class="line"></div>
-				<a class="btn" href="#">Learn more</a>
+				<a class="btn" href="#about">Learn more</a>
 			</div>			
-			<div class="slider">
+			<!-- <div class="slider">
 				<ul>
 					<li class="active"><span>01</span> intro</li>
 					<li><span>02</span> work</li>
 					<li><span>03</span> about</li>
 					<li><span>04</span> contacts</li>
 				</ul>
-			</div>
+			</div> -->
 		</div>
 	</section>
 
