fix bugs for safari

--- a/index.html
+++ b/index.html
@@ -69,24 +69,30 @@
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 			<div class="gallery">
-				<ul>
-					<li>
-						<img src="files/keyboard.jpg" alt="keyboard on the desktop" width="380" height="250">
-						<div class="overlay center">
-							<p>Super team</p>
-						</div>
+				<ul class="gallery__list">
+					<li class="gallery__item">
+						<div class="gallery__card card-gallery">
+							<img class="card-gallery__img" src="files/keyboard.jpg" alt="keyboard on the desktop" width="380" height="250">
+							<div class="card-gallery__overlay center">
+								<p class="card-gallery__desc">Super team</p>
+							</div>
+						</div>						
 					</li>
-					<li>
-						<img src="files/headphones.jpg" alt="headphones on the desktop" width="380" height="250">
-						<div class="overlay center">
-							<p>Super team</p>
-						</div>
+					<li class="gallery__item">
+						<div class="gallery__card card-gallery">
+							<img class="card-gallery__img" src="files/headphones.jpg" alt="headphones on the desktop" width="380" height="250">
+							<div class="card-gallery__overlay center">
+								<p class="card-gallery__desc">Super team</p>
+							</div>
+						</div>						
 					</li>
-					<li>
-						<img src="files/corner.jpg" alt="corner of the desktop" width="380" height="250">
-						<div class="overlay center">
-							<p>Super team</p>
-						</div>
+					<li class="gallery__item">
+						<div class="gallery__card card-gallery">
+							<img class="card-gallery__img" src="files/corner.jpg" alt="corner of the desktop" width="380" height="250">
+							<div class="card-gallery__overlay center">
+								<p class="card-gallery__desc">Super team</p>
+							</div>
+						</div>						
 					</li>
 				</ul>
 			</div>
